# precify

./: .gitignore  README.rst  makefile  pyproject.toml
migrations/versions/: 91b5215dbf20_.py  91b5215dbf20_migracao_inicial.py
precify/: app.py  precify.db
precify/api/: PriceResource.py  ProductResource.py  ProviderResource.py  api.py
precify/blueprints/: views.py
precify/ext/: admin.py  commands.py  database.py  language.py  serializer.py
precify/templates/: index.html
precify/templates/admin/: index.html
tests/: conftest.py  test_precify_app_config.py  test_price_resource.py  test_product_resource.py  test_provider_resource.py
