[tool.poetry]
name = "precify"
version = "0.1.0"
description = ""
authors = ["tiagosb <tdsb.contato@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"
python-dotenv = "^0.15.0"
ipdb = "^0.13.4"
ipython = "^7.19.0"
Flask-RESTful = "^0.3.8"
marshmallow-sqlalchemy = "^0.24.1"
flask-marshmallow = "^0.14.0"
black = "^20.8b1"
Flask-Admin = "^1.5.7"
Flask-BabelEx = "^0.9.4"
Flask-Migrate = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
